--- a/test/fixtures/book_categories.yml
+++ b/test/fixtures/book_categories.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
+  category: one
+  book: one
 
 two:
-  content: MyText
+  category: two
+  book: two
