--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 /log/*
 !/log/.keep
 /tmp
+app/views/publishers/_add.slim
+app/views/publishers/_add.slim
+app/views/publishers/_form-new.slim
+app/views/publishers/_publisher.slim
+app/views/publishers/_search.slim
+app/views/publishers/index.slim
+app/views/publishers/new.js.slim
+app/views/publishers/show.slim
