--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ app/views/publishers/_search.slim
 app/views/publishers/index.slim
 app/views/publishers/new.js.slim
 app/views/publishers/show.slim
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
